ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/IKOPRO_Contractor_Subscription__c/IKOPRO_Contractor_Subscription__c.object-meta.xml
<CustomObject>
    <label>Subscription</label>
    <nameField>
        <displayFormat>S-{0000}</displayFormat>
        <label>Subscription</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Subscriptions</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>