ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/IKOPRO_Contractor_Subscription__c/fields/Confirm_all_information_is_up_to_date__c.field-meta.xml
<CustomField>
    <fullName>Confirm_all_information_is_up_to_date__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Please confirm this information is up-to-date with HomeAdvisor before saving this record.</inlineHelpText>
    <label>Confirm all information is up-to-date</label>
    <type>Checkbox</type>
</CustomField>