ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/IKOPRO_Contractor_Subscription__c/fields/CRM_Key__c.field-meta.xml
<CustomField>
    <fullName>CRM_Key__c</fullName>
    <formula>Contractor_Account__r.IKOPRO_QueueID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CRM Key</label>
    <type>Text</type>
</CustomField>