ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/IKOPRO_Contractor_Subscription__c/fields/HA_Webservices_URL__c.field-meta.xml
<CustomField>
    <fullName>HA_Webservices_URL__c</fullName>
    <formula>$Setup.HomeAdvisor__c.HomeAdvisorEndPointURL__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>HA_Webservices URL</label>
    <type>Text</type>
</CustomField>