ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/IKOPRO_Contractor_Subscription__c/fields/HomeAdvisor_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>HomeAdvisor_Account_Name__c</fullName>
    <label>HomeAdvisor Account Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>