ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/IKOPRO_Contractor_Subscription__c/fields/Member_Contact_Phone__c.field-meta.xml
<CustomField>
    <fullName>Member_Contact_Phone__c</fullName>
    <inlineHelpText>Please provide the contact number that was provided at the time of your membership sign-up.</inlineHelpText>
    <label>Member Contact Phone</label>
    <type>Phone</type>
</CustomField>