ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/IKOPRO_Contractor_Subscription__c/fields/Membership_ID__c.field-meta.xml
<CustomField>
    <fullName>Membership_ID__c</fullName>
    <inlineHelpText>Please provide the membership Identifier that was shared with you during sign-up (e.g. HomeAdvisor SP Account Number).</inlineHelpText>
    <label>Membership ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>