ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/IKOPRO_Contractor_Subscription__c/fields/SourceId__c.field-meta.xml
<CustomField>
    <fullName>SourceId__c</fullName>
    <label>SourceId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>