ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/IKOPRO_Contractor_Subscription__c/fields/Subscribed_By__c.field-meta.xml
<CustomField>
    <fullName>Subscribed_By__c</fullName>
    <defaultValue>$User.FirstName &amp;&quot; &quot; &amp; $User.LastName</defaultValue>
    <label>Subscribed By</label>
    <length>100</length>
    <type>Text</type>
</CustomField>