ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/IKOPRO_Contractor_Subscription__c/recordTypes/EagleView.recordType-meta.xml
<RecordType>
    <fullName>EagleView</fullName>
    <active>true</active>
    <label>EagleView</label>
</RecordType>