ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/IKOPRO_Contractor_Subscription__c/recordTypes/GreenSky.recordType-meta.xml
<RecordType>
    <fullName>GreenSky</fullName>
    <active>true</active>
    <label>GreenSky</label>
</RecordType>