ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/IKOPRO_Contractor_Subscription__c/recordTypes/HomeAdvisor.recordType-meta.xml
<RecordType>
    <fullName>HomeAdvisor</fullName>
    <active>true</active>
    <label>HomeAdvisor</label>
</RecordType>