ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/IKOPRO_Contractor_Subscription__c/validationRules/Contractor_field_should_not_be_changed.validationRule-meta.xml
<ValidationRule>
    <fullName>Contractor_field_should_not_be_changed</fullName>
    <active>true</active>
    <description>Contractor field shows on the page layout, but should not be changed (cannot be removed from the layout: MD relationship)</description>
    <errorConditionFormula>AND(
NOT(ISNEW()),
ISCHANGED( Contractor_Account__c )
)</errorConditionFormula>
    <errorDisplayField>Contractor_Account__c</errorDisplayField>
    <errorMessage>You are not allowed to change this field.</errorMessage>
</ValidationRule>