ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/IKOPRO_Contractor_Subscription__c/validationRules/MembershipID_required.validationRule-meta.xml
<ValidationRule>
    <fullName>MembershipID_required</fullName>
    <active>false</active>
    <errorConditionFormula>ISBLANK( Membership_ID__c )</errorConditionFormula>
    <errorDisplayField>Membership_ID__c</errorDisplayField>
    <errorMessage>Please enter your HomeAdvisor Membership ID on your Account if you wish to continue the HomeAdvisor setup process.</errorMessage>
</ValidationRule>