ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/IKOPRO_Contractor_Subscription__c/validationRules/No_HomeAdvisor_for_Tier_1_and_0.validationRule-meta.xml
<ValidationRule>
    <fullName>No_HomeAdvisor_for_Tier_1_and_0</fullName>
    <active>true</active>
    <description>Tier 1 and Tier 0 ROOFPRO Accounts cannot sign up for HomeAdvisor. This validation rule blocks partner users from creating a HomeAdvisor subscription record when trying so save after clicking the &apos;Setup HomeAdvisor&apos; Account Action.</description>
    <errorConditionFormula>AND(
NOT(ISBLANK(HomeAdvisor_Account_Name__c)),
OR((Contractor_Account__r.Present_Tier_Lookup__r.Tier_Label__c = &quot;1&quot;),
(Contractor_Account__r.Present_Tier_Lookup__r.Tier_Label__c = &quot;0&quot;))

)</errorConditionFormula>
    <errorMessage>Oops! This feature is not available for your current Tier.</errorMessage>
</ValidationRule>